--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <section id="medsos" class="container medsos">
 <h2>Media Sosial</h2>
 <div class="medsos-list">
-<a href="https://github.com/username" target="_blank" class="medsos-item">
+<a href="https://github.com/alpha1227" target="_blank" class="medsos-item">
 <img src="logo github.png" alt="GitHub" />
 <span>Github</span>
 </a>
@@ -143,7 +143,7 @@ href="https://linkedin.com/in/username" target="blank" class="medsos-item">
 
 <!-- Bagian Footer -->
 <footer>
-<p>@ 2026 Adeveloper Project</p>
+<p>@ 2026 AlphaGhaly</p>
       </footer>
    </body>
  <html>
