--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="proyek-grid">
 
     <a href="https://docs.google.com/spreadsheets/d/1lPyY2BY8l452sBzuk8a3hYVpPwvOTTkI/edit?usp=drive_link&ouid=114082127343191857200&rtpof=true&sd=true" target="_blank" class="proyek-card">
-      <img src="project.png" alt="ExcelProject" />
+      <img src="Gemini_Generated_Image_izrfmjizrfmjizrf.png" alt="ExcelProject" />
       <div class="proyek-info">
         <h3>Excel</h3>
         <p>My Excel Project</p>
@@ -82,7 +82,7 @@
     </a>
 
     <a href="#" target="_blank" class="proyek-card">
-      <img src="project.png" alt="ArduinoLyric" />
+      <img src="ArduinoLirik.png" alt="ArduinoLyric" />
       <div class="proyek-info">
         <h3>Arduino Lirik</h3>
         <p>Arduino Lyric Display Project</p>
@@ -90,7 +90,7 @@
     </a>
 
     <a href="https://drive.google.com/file/d/160Sr77ZvUNXgkn43uSh1GRnzft2eHUVT/view?usp=drive_link" target="_blank" class="proyek-card">
-      <img src="project.png" alt="Flowchart Project" />
+      <img src="Flowchart.png" alt="Flowchart Project" />
       <div class="proyek-info">
         <h3>Flowchart</h3>
         <p>My Flowchart Project</p>
@@ -98,7 +98,7 @@
     </a>
 
     <a href="#" target="_blank" class="proyek-card">
-      <img src="project.png" alt="Website Project" />
+      <img src="Portofolio.png" alt="Website Project" />
       <div class="proyek-info">
         <h3>Website Sederhana</h3>
         <p>My Website Project</p>
@@ -106,7 +106,7 @@
     </a>
 
     <a href="https://alpha1227.github.io/alphaghaly/" target="_blank" class="proyek-card">
-      <img src="project.png" alt="PSAJ Project" />
+      <img src="Website PSAJ.png" alt="PSAJ Project" />
       <div class="proyek-info">
         <h3>Website PSAJ</h3>
         <p>Website PSAJ Non Tulis</p>
@@ -124,7 +124,7 @@
 <span>Github</span>
 </a>
 <a
-href="https://instagram.com/username" target="_blank" class="medsos-item">
+href="https://www.instagram.com/alphaagh?igsh=NXd3dml1MHVoMHVk" target="_blank" class="medsos-item">
 <img src="logo ig.jpg" alt="Instagram" />
 <span>Instagram</span>
 </a>
