--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section id="home" class="hero">
   <div class="hero-content">
     <p>Hi, Welcome to My Website</p>
-    <h1>AlphaGhaly</h1>
+    <h1>AlphaaaGh</h1>
     <p>
       Website ini merupakan website portofolio saya yang merupakan deskripsi
       singkat tentang saya.
