--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <div class="about-content">
     <p>
       Nama saya <strong>Muhammad Alpha Ghaly Athallah</strong>, berasal dari
-      <strong>Surabaya</strong>, dan merupakan lulusan
-      <strong>Pendidikan Informatika</strong>. Saya memiliki minat untuk mendaftar Bintara TNI AD dan di bidang
+      <strong>Surabaya</strong>, dan merupakan Siswa
+      <strong>SMA IPIEMS Surabaya</strong>. Saya memiliki minat untuk mendaftar Bintara TNI AD dan di bidang
       teknologi dan digital.
     </p>
     <p>
